# shift_test

./: .env  Dockerfile  README copy.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: cd639936d3a4_init.py
shift_test/src/: main.py
shift_test/src/api/: auth.py  availability.py  bookings.py  room_slot.py  rooms.py  router.py
shift_test/src/core/: config.py  logging.py  security.py
shift_test/src/crud/: availability.py  booking.py  room.py  room_slot.py  user.py
shift_test/src/db/: session.py
shift_test/src/models/: booking.py  room.py  room_slot.py  user.py
shift_test/src/schemas/: auth.py  availability.py  booking.py  room.py  room_slot.py  user.py
tests/: conftest.py
tests/integration/: test_auth.py  test_bookings.py  test_logout.py  test_rooms.py  test_slot_booking.py
tests/unit/: test_availability.py  test_bookings_crud.py  test_security.py  test_users_crud.py
